plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.4'
	id 'io.spring.dependency-management' version '1.1.3'
}

group = 'thi.cnd'
version = '0.0.1-SNAPSHOT'


springBoot {
	mainClass = 'thi.cnd.authservice.application.Application'
}

jar {
	manifest {
		attributes('Main-Class': 'thi.cnd.authservice.application.Application')
	}
}

repositories {
	mavenCentral()
}

subprojects {
	apply plugin: 'java'
	apply plugin: 'org.springframework.boot'
	apply plugin: 'io.spring.dependency-management'

	java {
		sourceCompatibility = '20'
	}

	repositories {
		mavenCentral()
	}

	dependencies {
		implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
		implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
		implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
		compileOnly 'org.projectlombok:lombok'
		annotationProcessor 'org.projectlombok:lombok'
		testImplementation 'org.springframework.boot:spring-boot-starter-test'
	}

	tasks.named('test') {
		useJUnitPlatform()
	}

	bootJar {
		enabled = false
	}

	tasks.withType(JavaCompile).configureEach {
		options.compilerArgs += "--enable-preview"
	}

	tasks.withType(Test).configureEach {
		jvmArgs += "--enable-preview"
	}

	tasks.withType(JavaExec).tap {
		configureEach {
			jvmArgs += '--enable-preview'
		}
	}
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs += "--enable-preview"
}

tasks.withType(Test).configureEach {
	jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec).tap {
	configureEach {
		jvmArgs += '--enable-preview'
	}
}

test {
	useJUnitPlatform()
}
